[gd_scene load_steps=8 format=4]

[ext_resource type="Script" path="res://Shop/ShopCardDisplay.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://bvoton0v0doc0" path="res://Card System/card_visual.tscn" id="2"]
[ext_resource type="Texture2D" uid="uid://cajiiol7gqwa0" path="res://Art/PriceTagLarge.png" id="3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ihx3u"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_y6g20"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ux57f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kxc5r"]

[node name="ShopCardDisplay" type="Control"]
custom_minimum_size = Vector2(228, 324)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.0
offset_top = -162.0
offset_right = 114.0
offset_bottom = 162.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(114, 162)
script = ExtResource("1")

[node name="Visual" parent="." instance=ExtResource("2")]
layout_mode = 1
mouse_filter = 0

[node name="Button" type="Button" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 6.0
offset_right = 6.0
offset_bottom = 18.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/disabled = SubResource("StyleBoxEmpty_ihx3u")
theme_override_styles/hover = SubResource("StyleBoxEmpty_y6g20")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_ux57f")
theme_override_styles/normal = SubResource("StyleBoxEmpty_kxc5r")

[node name="PriceTag" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -18.0
offset_top = 384.0
offset_right = 258.0
offset_bottom = 480.0
texture = ExtResource("3")
stretch_mode = 3

[node name="Label" type="Label" parent="PriceTag"]
custom_minimum_size = Vector2(90, 0)
layout_mode = 0
offset_left = 92.0
offset_top = 18.0
offset_right = 280.0
offset_bottom = 91.0
theme_override_colors/font_color = Color(0.9686269760131836, 1, 0.9725490212440491, 1)
theme_override_colors/font_shadow_color = Color(0.05490199849009514, 0.06666669994592667, 0.062745101749897, 1)
theme_override_colors/font_outline_color = Color(0.05490199849009514, 0.06666669994592667, 0.062745101749897, 1)
theme_override_constants/shadow_offset_x = 3
theme_override_constants/shadow_offset_y = 3
theme_override_font_sizes/font_size = 72
text = "0"
horizontal_alignment = 1

[connection signal="mouse_entered" from="Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
